welcome.lessons.welcome.conditions.Conditions.scala.error
Program:5: error: ';' expected but 'else' found.
} else {
  ^Program:9: error: Unmatched closing brace '}' ignored here
	}
        ^